--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,6 +48,7 @@ jobs:
             sudo docker compose down
             sudo docker compose build
             sudo docker compose up -d
+            sudo docker image prune -f
 
       - name: Send Telegram notification (Success)
         if: success()
