fix: escape special characters in Telegram notification messages for proper formatting !@#$%^&*()_+

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,14 +56,15 @@ jobs:
           TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
         run: |
-          COMMIT_MESSAGE=$(git log -1 --pretty=format:"%s")
-          AUTHOR_NAME=$(git log -1 --pretty=format:"%an")
+          COMMIT_MESSAGE=$(git log -1 --pretty=format:"%s" | sed -e 's/[][(){}*_`~>#+\-=|.!?&$@]/\\&/g')
+          AUTHOR_NAME=$(git log -1 --pretty=format:"%an" | sed -e 's/[][(){}*_`~>#+\-=|.!?&$@]/\\&/g')
           COMMIT_URL="https://github.com/${{ github.repository }}/commit/${{ github.sha }}"
-          
+          COMMIT_URL_ESCAPED=$(echo "$COMMIT_URL" | sed -e 's/\//\\\//g' -e 's/:/\\:/g' -e 's/\./\\./g')
+
           curl -s -X POST https://api.telegram.org/bot$TELEGRAM_BOT_TOKEN/sendMessage \
             -d chat_id="$TELEGRAM_CHAT_ID" \
-            -d text="✅ CI/CD Sukses!%0AProject *lots-netion* berhasil dideploy ke VPS 🎉%0A%0A📝 *Commit:* \`$COMMIT_MESSAGE\`%0A👤 *Author:* $AUTHOR_NAME%0A🔗 [Lihat Commit]($COMMIT_URL)" \
-            -d parse_mode=Markdown
+            -d text="✅ CI\\/CD Sukses\!\nProject *lots-netion* berhasil dideploy ke VPS 🎉\n\n📝 *Commit:* \`${COMMIT_MESSAGE}\`\n👤 *Author:* ${AUTHOR_NAME}\n🔗 [Lihat Commit](${COMMIT_URL_ESCAPED})" \
+            -d parse_mode=MarkdownV2
 
       - name: Send failure Telegram notification
         if: failure()
@@ -71,14 +72,16 @@ jobs:
           TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
         run: |
-          COMMIT_MESSAGE=$(git log -1 --pretty=format:"%s")
-          AUTHOR_NAME=$(git log -1 --pretty=format:"%an")
+          COMMIT_MESSAGE=$(git log -1 --pretty=format:"%s" | sed -e 's/[][(){}*_`~>#+\-=|.!?&$@]/\\&/g')
+          AUTHOR_NAME=$(git log -1 --pretty=format:"%an" | sed -e 's/[][(){}*_`~>#+\-=|.!?&$@]/\\&/g')
           COMMIT_URL="https://github.com/${{ github.repository }}/commit/${{ github.sha }}"
-          
+          COMMIT_URL_ESCAPED=$(echo "$COMMIT_URL" | sed -e 's/\//\\\//g' -e 's/:/\\:/g' -e 's/\./\\./g')
+
           curl -s -X POST https://api.telegram.org/bot$TELEGRAM_BOT_TOKEN/sendMessage \
             -d chat_id="$TELEGRAM_CHAT_ID" \
-            -d text="❌ CI/CD Gagal!%0AProject *lots-netion* gagal dideploy ke VPS ⚠️%0A%0A📝 *Commit:* \`$COMMIT_MESSAGE\`%0A👤 *Author:* $AUTHOR_NAME%0A🔗 [Lihat Commit]($COMMIT_URL)" \
-            -d parse_mode=Markdown
+            -d text="❌ CI\\/CD Gagal\!\nProject *lots-netion* gagal dideploy ke VPS ⚠️\n\n📝 *Commit:* \`${COMMIT_MESSAGE}\`\n👤 *Author:* ${AUTHOR_NAME}\n🔗 [Lihat Commit](${COMMIT_URL_ESCAPED})" \
+            -d parse_mode=MarkdownV2
+
 
 
         # sudo docker rmi lots-netion-d20-frontend:latest || true
