--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,32 +56,33 @@ jobs:
           TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
         run: |
-          COMMIT_MESSAGE=$(git log -1 --pretty=format:"%s" | sed -e 's/[][(){}*_`~>#+=|.!?&$@\-]/\\&/g')
-          AUTHOR_NAME=$(git log -1 --pretty=format:"%an" | sed -e 's/[][(){}*_`~>#+=|.!?&$@\-]/\\&/g')
+          # Escape special characters safely for Telegram MarkdownV2
+          COMMIT_MESSAGE=$(git log -1 --pretty=format:"%s" | sed -e 's/[][(){}*_`~>#+=|.!?&$@-]/\\&/g')
+          COMMIT_MESSAGE_ESCAPED=$(printf '%s' "$COMMIT_MESSAGE" | sed -e 's/-/\\-/g')
+          AUTHOR_NAME=$(git log -1 --pretty=format:"%an" | sed -e 's/[][(){}*_`~>#+=|.!?&$@-]/\\&/g' | sed -e 's/-/\\-/g')
           COMMIT_URL="https://github.com/${{ github.repository }}/commit/${{ github.sha }}"
           COMMIT_URL_ESCAPED=$(echo "$COMMIT_URL" | sed -e 's/\//\\\//g' -e 's/:/\\:/g' -e 's/\./\\./g')
 
           curl -s -X POST https://api.telegram.org/bot$TELEGRAM_BOT_TOKEN/sendMessage \
             -d chat_id="$TELEGRAM_CHAT_ID" \
-            -d text="✅ CI\\/CD Sukses\!\nProject *lots-netion* berhasil dideploy ke VPS 🎉\n\n📝 *Commit:* \`${COMMIT_MESSAGE}\`\n👤 *Author:* ${AUTHOR_NAME}\n🔗 [Lihat Commit](${COMMIT_URL_ESCAPED})" \
+            -d text="✅ CI\\/CD Sukses\!\nProject *lots-netion* berhasil dideploy ke VPS 🎉\n\n📝 *Commit:* \`${COMMIT_MESSAGE_ESCAPED}\`\n👤 *Author:* ${AUTHOR_NAME}\n🔗 [Lihat Commit](${COMMIT_URL_ESCAPED})" \
             -d parse_mode=MarkdownV2
 
-      - name: Send failure Telegram notification
+      - name: Send Telegram notification (Failure)
         if: failure()
         env:
           TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
         run: |
-          COMMIT_MESSAGE=$(git log -1 --pretty=format:"%s" | sed -e 's/[][(){}*_`~>#+=|.!?&$@\-]/\\&/g')
-          AUTHOR_NAME=$(git log -1 --pretty=format:"%an" | sed -e 's/[][(){}*_`~>#+=|.!?&$@\-]/\\&/g')
+          COMMIT_MESSAGE=$(git log -1 --pretty=format:"%s" | sed -e 's/[][(){}*_`~>#+=|.!?&$@-]/\\&/g')
+          COMMIT_MESSAGE_ESCAPED=$(printf '%s' "$COMMIT_MESSAGE" | sed -e 's/-/\\-/g')
+          AUTHOR_NAME=$(git log -1 --pretty=format:"%an" | sed -e 's/[][(){}*_`~>#+=|.!?&$@-]/\\&/g' | sed -e 's/-/\\-/g')
           COMMIT_URL="https://github.com/${{ github.repository }}/commit/${{ github.sha }}"
           COMMIT_URL_ESCAPED=$(echo "$COMMIT_URL" | sed -e 's/\//\\\//g' -e 's/:/\\:/g' -e 's/\./\\./g')
 
           curl -s -X POST https://api.telegram.org/bot$TELEGRAM_BOT_TOKEN/sendMessage \
             -d chat_id="$TELEGRAM_CHAT_ID" \
-            -d text="❌ CI\\/CD Gagal\!\nProject *lots-netion* gagal dideploy ke VPS ⚠️\n\n📝 *Commit:* \`${COMMIT_MESSAGE}\`\n👤 *Author:* ${AUTHOR_NAME}\n🔗 [Lihat Commit](${COMMIT_URL_ESCAPED})" \
+            -d text="❌ CI\\/CD Gagal\!\nProject *lots-netion* gagal dideploy ke VPS ⚠️\n\n📝 *Commit:* \`${COMMIT_MESSAGE_ESCAPED}\`\n👤 *Author:* ${AUTHOR_NAME}\n🔗 [Lihat Commit](${COMMIT_URL_ESCAPED})" \
             -d parse_mode=MarkdownV2
-
-
 
         # sudo docker rmi lots-netion-d20-frontend:latest || true
