--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -58,7 +58,7 @@ jobs:
         run: |
           escape_markdown_v2() {
             local text="$1"
-            text="${text//\\/\\\\}"
+            text="${text//\\/\\\\}"  # Escape backslash dulu
             text="${text//_/\\_}"
             text="${text//*/\\*}"
             text="${text//[/\\[}"
@@ -75,11 +75,6 @@ jobs:
             text="${text//|/\\|}"
             text="${text//./\\.}"
             text="${text//>/\\>}"
-            text="${text//&/\\&}"
-            text="${text//$/\\$}"
-            text="${text//@/\\@}"
-            text="${text//:/\\:}"
-            text="${text//?/\\?}"
             echo "$text"
           }
 
@@ -104,7 +99,7 @@ jobs:
         run: |
           escape_markdown_v2() {
             local text="$1"
-            text="${text//\\/\\\\}"
+            text="${text//\\/\\\\}"  # Escape backslash dulu
             text="${text//_/\\_}"
             text="${text//*/\\*}"
             text="${text//[/\\[}"
@@ -121,13 +116,9 @@ jobs:
             text="${text//|/\\|}"
             text="${text//./\\.}"
             text="${text//>/\\>}"
-            text="${text//&/\\&}"
-            text="${text//$/\\$}"
-            text="${text//@/\\@}"
-            text="${text//:/\\:}"
-            text="${text//?/\\?}"
             echo "$text"
           }
+
 
           COMMIT_MESSAGE_RAW=$(git log -1 --pretty=format:"%s")
           AUTHOR_NAME_RAW=$(git log -1 --pretty=format:"%an")
