--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -135,3 +135,4 @@ jobs:
             -d parse_mode="MarkdownV2"
 
         # sudo docker rmi lots-netion-d20-frontend:latest || true
+        # TEST GA #8
