--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -82,4 +82,4 @@ jobs:
 
 
         # sudo docker rmi lots-netion-d20-frontend:latest || true
-        # Test TELEGRAM BOT to GROUP
+        # Test GA 10
